Fixing tooltip word wrap

--- a/cycledash/static/css/examine.css
+++ b/cycledash/static/css/examine.css
@@ -90,6 +90,7 @@ th.uber-column:last-child {
 .vcf-table .tooltip {
     display: none;
     word-wrap: break-word;
+    white-space: normal;
     border-radius: 3px;
     position: absolute;
     top: 110%;
